@@ -1,3 +1,7 @@
+2007-09-07  Christoph Brill  <egore911@egore911.de>
+	* data/graphics/Makefile.am: fix install paths so that make distcheck
+	passes and the data is actually installed
+
 2007-09-05  Christoph Brill  <egore911@egore911.de>
 	* configure.ac, Makefile.am, +data/Makefile.am: Hopefully handle data
 	correctly to be used in make install
